--- a/Puissance4/window/StatsWindow.xaml
+++ b/Puissance4/window/StatsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Puissance4.window"
         mc:Ignorable="d"
-        Title="StatsWindow"
+        Title="Puissance4 - Statistiques"
 		Height="300"
 		Width="500"
 		ResizeMode="NoResize"
